<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LogInActivity">

        <android.support.constraint.Guideline
            android:id="@+id/guideline_sign_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".15"/>
        <android.support.constraint.Guideline
            android:id="@+id/guideline_sign_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".85"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline_sign_start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".3"/>
        <android.support.constraint.Guideline
            android:id="@+id/guideline_sign_end_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".7"/>
        <TextView
            android:id="@+id/sign_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintBottom_toTopOf="@id/sign_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginBottom="80dp"/>
        <EditText
            android:id="@+id/sign_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            app:layout_constraintBottom_toTopOf="@id/sign_password"
            app:layout_constraintStart_toEndOf="@id/guideline_sign_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_sign_end"
            app:layout_constraintTop_toBottomOf="@id/sign_logo"
            android:layout_marginBottom="@dimen/padding"/>
        <EditText
            android:id="@+id/sign_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:layout_constraintBottom_toTopOf="@id/sign_confirm"
            app:layout_constraintStart_toEndOf="@id/guideline_sign_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_sign_end"
            app:layout_constraintTop_toBottomOf="@id/sign_username"
            android:layout_marginBottom="@dimen/padding"
            />
        <EditText
            android:id="@+id/sign_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password_confirm"
            app:layout_constraintTop_toBottomOf="@id/sign_password"
            app:layout_constraintStart_toEndOf="@id/guideline_sign_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_sign_end"
            app:layout_constraintBottom_toTopOf="@id/button_signup"
            android:layout_marginBottom="@dimen/padding"/>
        <Button
            android:id="@+id/button_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_signup"
            app:layout_constraintTop_toBottomOf="@id/sign_confirm"
            app:layout_constraintStart_toEndOf="@id/guideline_sign_start_button"
            app:layout_constraintEnd_toStartOf="@id/guideline_sign_end_button"
            app:layout_constraintBottom_toTopOf="@id/login"
            android:layout_marginBottom="@dimen/margin_signup_text"/>
        <TextView
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            app:layout_constraintTop_toBottomOf="@id/button_signup"
            app:layout_constraintStart_toEndOf="@id/guideline_sign_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_sign_end"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goLogIn"/>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>